[package]
name = "rusty-wollf"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
anyhow = "1"
log = "0.4"
html_parser = "0.7.0"
env_logger = "0.11.9"
clap = { version = "4.4", features = ["derive"] }
url = "2.4"